# Finova-Backend

./: .env.sample  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
api/core/: config.py
api/db/: database.py
api/utils/: logger.py
api/v1/agents/: financial_agent.py  financial_agent_alternative.py
api/v1/models/: __init__.py  base_model.py  company.py  user.py
api/v1/routes/: __init__.py  ai_analysis.py  auth.py  company.py  google_auth.py
api/v1/schemas/: company.py  financial_models.py  google_auth.py  response_models.py  user.py
api/v1/services/: company.py  google_auth.py  user.py
api/v1/tools/: calculation_tools.py  database_tools.py
templates/prompts/: financial_analysis.j2  financial_analysis.py
tests/: test_db.py  test_exceptions.py
