[project]
name = "finova-backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Magnus984",email = "nharnharyhaw984@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "mongoengine (>=0.29.1,<0.30.0)",
    "pydantic-settings (>=2.8.1,<3.0.0)",
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "pytest (>=8.3.5,<9.0.0)",
    "pytest-asyncio (>=0.26.0,<0.27.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "langchain (>=0.3.21,<0.4.0)",
    "langchain-openai (>=0.3.11,<0.4.0)",
    "langchain-anthropic (>=0.3.10,<0.4.0)",
    "langchain-groq (>=0.3.1,<0.4.0)",
    "motor (>=3.7.0,<4.0.0)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "langchain-community (>=0.3.20,<0.4.0)",
    "numexpr (>=2.10.2,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
